2006-05-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/errors.h: New file.
	* include/dshow.h: Include <errors.h>.

2006-05-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/dshow.h: New file.
	* include/evcode.h: New file.
	* include/audevcod.h: New file.
	* include/dvdevcod.h: New file.

2006-05-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mprapi.h (MprAdminConnection*,MprAdminPort*): Add declaration.
	* lib/mprapi.def: New file.

2006-05-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mprapi.h (PPP_*INFO*, RAS_CONNECTION_*, RAS_PORT_*,
	RAS_USER_*): New structures.
	* include/mprapi.h (RAS_FLAGS_*,PPP_LCP_*,RASCCPCA_* ,PPP_CCP_*,MAX_*,
	RASPRIV_*,*ADDRESSLEN,MPR_ENABLE_*): Define.
	* include/mprapi.h (RAS_*_CONDITION): Add enums.
	* include/mprapi.h: <lmcons.h> for NETBIOS_NAME_LEN, UNLEN, DLEN.

2006-05-02  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mprapi.h: New file.
	* include/routprot.h: New file.
	* include/ipxrtdef.h: New file.
	* include/ipxconst.h: New file.
	* include/stm.h: New file.

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ddk/winddk.h (KAFFINITY): Fix typo.
	Thanks to:    Oliver Stoeneberg <kidkat at sf dot net>

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winbase.h (ENUMRES*PROC{AW}): ANSI and Unicode versions.
	Thanks to:    Oliver Stoeneberg <kidkat at sf dot net>

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/ntsecapi.h (POLICY_DNS_DOMAIN_INFO): Fix typo.
	Thanks to:    Oliver Stoeneberg <kidkat at sf dot net>

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/wingdi.h (BITMAPV5HEADER): New structure definition.

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/basetyps.h (REFFMTID): Define properly.

2006-04-28  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>